SEO and more responsiveness

--- a/about.html
+++ b/about.html
@@ -5,17 +5,18 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="A more in depth description of who Onalerona is">
   <link rel="stylesheet" href="styles.css" />
   <title>About Onalerona</title>
 </head>
 
 <body>
-  <a href="index.html" class="homepage-link">Back to homepage</a>
+  <a title="Home Page" href="index.html" class="homepage-link">Back to homepage</a>
   <h1>About me</h1>
   <h3>Front-end developer from [City], [Country]</h3>
   <div class="container">
     <div class="row">
-      <div class="col-sm-2">
+      <div class="col-sm-4">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
           aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
@@ -29,7 +30,7 @@
           blanditiis harum.
         </p>
       </div>
-      <div class="col-sm-2">
+      <div class="col-sm-4">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
           aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
@@ -47,7 +48,7 @@
 
     <div id="contact">
       <h2>📮 Contact me</h2>
-      <a href="mailto:onasihle123@gmail.com" class="email-link">
+      <a title="Email" href="mailto:onasihle123@gmail.com" class="email-link">
         onasihle123@gmail.com
       </a>
     </div>
