--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="An introduction and a tour of projects">a
   <title>Onalerona</title>
   <link rel="stylesheet" href="styles.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -25,13 +26,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a title="Home page" class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About me</a>
+            <a title="About me" class="nav-link" href="about.html">About me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html#contact">Contact me</a>
+            <a title="Contact section of About me page" class="nav-link" href="about.html#contact">Contact me</a>
           </li>
         </ul>
       </div>
@@ -42,8 +43,8 @@
   <h1 class="tea-green">Onalerona Sihle Zwane</h1>
   <h3>South African Front-end developer, based in Pretoria</h3>
   <div class="navigation-links">
-    <a href="about.html#contact" class="contact-link">Contact me</a>
-    <a href="about.html" class="about-link">About me</a>
+    <a title="Contact section of About me page" href="about.html#contact" class="contact-link">Contact me</a>
+    <a title="Home page" href="about.html" class="about-link">About me</a>
   </div>
 
   <div class="container">
@@ -78,7 +79,7 @@
         </p>
       </div>
       <div class="col-sm-6">
-        <img class="img-fluid" src="images/Fun Weather App 😜.jpeg" alt="yoga" />
+        <img class="img-fluid" src="images/Fun Weather App 😜.jpeg" alt="weather" />
 
         <div class="launch-link m-5">
           <a class="launch mt-5" href="index.html">Launch Weather app</a>
@@ -88,7 +89,7 @@
 
     <div class="row">
       <div class="col-sm-6">
-        <img class="img-fluid" src="images/How To Make Greek Yogurt (No Special Equipment) - Tasty Oven.jpeg" alt="yoga" />
+        <img class="img-fluid" src="images/How To Make Greek Yogurt (No Special Equipment) - Tasty Oven.jpeg" alt="yoghurt" />
       </div>
       <div class="col-sm-6">
         <h1>Yogurt App</h1>
