--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <body>
   <a title="Home Page" href="index.html" class="homepage-link">Back to homepage</a>
   <h1>About me</h1>
-  <h3>Front-end developer from [City], [Country]</h3>
+  <h3>Front-end developer from Pretoria, South African</h3>
   <div class="container">
     <div class="row">
       <div class="col-sm-4">
